--- a/app/src/main/res/layout/activity_dice.xml
+++ b/app/src/main/res/layout/activity_dice.xml
@@ -14,7 +14,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/city" />
 
     <ImageButton
         android:id="@+id/diceButton"
